--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://metatags.io/" />
     <meta property="og:title" content="Sweet Fruit - Dulzura en cada cucharada." />
     <meta property="og:description" content="Mermeladas de Frutilla y Naranja caseras y baratas. Envase de vidrio." />
-    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="og:image" content="img/sweetFruit.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://metatags.io/" />
     <meta property="twitter:title" content="Sweet Fruit - Dulzura en cada cucharada." />
     <meta property="twitter:description" content="Mermeladas de Frutilla y Naranja caseras y baratas. Envase de vidrio." />
-    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+    <meta property="twitter:image" content="img/sweetFruit.jpg" />
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
