--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:url" content="https://pod3sta6108807.github.io/sweet-fruit.github-io/index.html" />
     <meta property="og:title" content="Sweet Fruit - Dulzura en cada cucharada." />
     <meta property="og:description" content="Mermeladas de Frutilla y Naranja caseras y baratas. Envase de vidrio." />
     <meta property="og:image" content="img/sweetFruit.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:url" content="https://pod3sta6108807.github.io/sweet-fruit.github-io/index.html" />
     <meta property="twitter:title" content="Sweet Fruit - Dulzura en cada cucharada." />
     <meta property="twitter:description" content="Mermeladas de Frutilla y Naranja caseras y baratas. Envase de vidrio." />
     <meta property="twitter:image" content="img/sweetFruit.jpg" />
