--- a/aboutUs.html
+++ b/aboutUs.html
@@ -27,7 +27,7 @@
 
     <!-- Meta Tags Generated with https://metatags.io -->
 
-    <title>Document</title>
+    <title>Sweet Fruit - About Us</title>
 </head>
 <body>
     <header>
