--- a/aboutUs.html
+++ b/aboutUs.html
@@ -69,7 +69,7 @@
             <p>Un proyecto llevado a cabo por 10 estudiantes con solo un proposito, vender mermeladas de frutas de varios sabores (Frutilla, durazno, naranja). Las actividades de esta maravillosa empresa comenzaron el 02/09, luego de haber cambiado la idea de velas aromaticas hacia las mermeladas.</p>
             <p>Estudiantes y Creditos:</p>
             <ul>
-                <li>Lara Alvarez <span>(Socio y Producón de mermeladas)</span></li>
+                <li>Lara Alvarez <span>(Socio y Producción de mermeladas)</span></li>
                 <li>Mora Sosa <span>(Socio y Decorativos del estand)</span></li>
                 <li>Azul Cardoso <span>(Administracion)</span></li>
                 <li>Santino Calabrese <span>(Socio yAdministracion)</span></li>
