--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://pod3sta6108807.github.io/sweet-fruit/index.html" />
+    <meta property="twitter:url" content="https://sweet-fruit.github.io/sweet-fruit/index.html" />
     <meta property="twitter:title" content="Sweet Fruit - Dulzura en cada cucharada." />
     <meta property="twitter:description" content="Mermeladas de Frutilla y Naranja caseras y baratas. Envase de vidrio." />
     <meta property="twitter:image" content="https://sweet-fruit.github.io/sweet-fruit/img/sweetFruit.jpg" />
