--- a/products.html
+++ b/products.html
@@ -52,6 +52,7 @@
             <li class="nav__item"><a href="index.html">Inicio</a></li>
             <li class="nav__item"><a href="products.html">Productos</a></li>
             <li class="nav__item"><a href="aboutUs.html">Nosotros</a></li>
+            <li class="nav__item"><a href="extra.html">???</a></li>
         </ul>
     </nav>
     <div>
