--- a/extra.html
+++ b/extra.html
@@ -11,7 +11,7 @@
         <input type="checkbox" id="open-menu" class="header__checkbox">
         <label for="open-menu" role="checkbox" class="header__open-nav-button">=</label>
         <div class="header__logo-container">
-            <img src="img/PoDCanal.jpg" alt="Logo" class="header__logo">
+            <img src="img/favicon.png" alt="Logo" class="header__logo">
         </div>
         <h2 class="name">Sweet Fruit</h2>
         <nav class="header__nav">
