--- a/extra.html
+++ b/extra.html
@@ -16,9 +16,9 @@
         <h2 class="name">Sweet Fruit</h2>
         <nav class="header__nav">
             <ul class="header__nav-list">
-                <li class="header__nav-item"><a href="#">Home</a></li>
-                <li class="header__nav-item"><a href="#">Products</a></li>
-                <li class="header__nav-item"><a href="#">About Us</a></li>
+                <li class="header__nav-item"><a href="index.html">Home</a></li>
+                <li class="header__nav-item"><a href="products.html">Products</a></li>
+                <li class="header__nav-item"><a href="aboutus.html">About Us</a></li>
             </ul>
         </nav>
     </header>
