--- a/extra.html
+++ b/extra.html
@@ -18,7 +18,7 @@
             <ul class="header__nav-list">
                 <li class="header__nav-item"><a href="index.html">Home</a></li>
                 <li class="header__nav-item"><a href="products.html">Products</a></li>
-                <li class="header__nav-item"><a href="aboutus.html">About Us</a></li>
+                <li class="header__nav-item"><a href="aboutUs.html">About Us</a></li>
             </ul>
         </nav>
     </header>
